[tool.poetry]
name = "Data_Saver"
version = "0.1"
description = "Look at README"
authors = ["Showierdata9978"]
license = "mit"
readme = 'README.md'
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
